init & dev works

--- a/example/package.json
+++ b/example/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "example",
   "private": true,
   "scripts": {
     "init": "wdwh init",
@@ -7,11 +6,7 @@
     "build": "wdwh build"
   },
   "dependencies": {
-    "@virgin-engine/wdwh": "0.1.22",
-    "bun-plugin-tailwind": "^0.0.14",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "@virgin-engine/wdwh": "latest"
   },
   "devDependencies": {
     "@types/bun": "latest"
