--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@virgin-engine/wdwh",
   "author": "VirginEngine",
-  "version": "0.1.22",
+  "version": "0.2.0",
   "repository": "https://github.com/VirginEngine/wdwh.git",
   "description": "Easyer web dev without html and reduced css",
   "keywords": [
@@ -20,11 +20,10 @@
     "README.md",
     "dist",
     "types.d.ts",
-    "index.ts",
     "bunfig.toml"
   ],
   "scripts": {
-    "dev": "clear && BASE_PATH=/test bun test.ts",
+    "dev": "clear && BASE_PATH=./test bun test.ts",
     "build": "bun build.ts",
     "deploy": "bun publish.ts"
   },
@@ -32,7 +31,10 @@
     "wdwh": "./dist/main.ts"
   },
   "dependencies": {
-    "bun-plugin-tailwind": "^0.0.15"
+    "bun-plugin-tailwind": "^0.0.15",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@types/bun": "latest"
