--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@virgin-engine/wdwh",
   "author": "VirginEngine",
-  "version": "1.0.0",
+  "version": "1.0.3-dev.0",
   "repository": "https://github.com/VirginEngine/wdwh.git",
   "description": "Easyer web dev without html and reduced css",
   "keywords": [
@@ -31,16 +31,16 @@
     "wdwh": "./dist/main.ts"
   },
   "dependencies": {
-    "bun-plugin-tailwind": "^0.0.15",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "bun-plugin-tailwind": "latest",
+    "react": "latest",
+    "react-dom": "latest",
+    "tailwindcss": "latest"
   },
   "devDependencies": {
     "@types/bun": "latest"
   },
   "peerDependencies": {
-    "typescript": "^5.9.2"
+    "typescript": "latest"
   },
   "publishConfig": {
     "access": "public"
