--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@virgin-engine/wdwh",
   "author": "VirginEngine",
-  "version": "1.3.0-dev.-1",
+  "version": "1.4.0-dev.-1",
   "repository": "https://github.com/VirginEngine/wdwh.git",
   "description": "Easyer web dev without html and reduced css",
   "keywords": [
@@ -18,11 +18,9 @@
   "files": [
     "LICENSE",
     "README.md",
-    "dist",
-    "types.d.ts"
+    "dist"
   ],
   "scripts": {
-    "dev": "clear && BASE_PATH=./test bun test.ts",
     "build": "bun build.ts",
     "deploy": "bun publish.ts"
   },
