move from VirginEngine to kubashh

--- a/example/package.json
+++ b/example/package.json
@@ -5,7 +5,7 @@
     "build": "wdwh build"
   },
   "dependencies": {
-    "@virgin-engine/wdwh": "latest"
+    "wdwh": "latest"
   },
   "devDependencies": {
     "@types/react": "latest",
