--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@virgin-engine/wdwh",
-  "author": "VirginEngine",
-  "version": "1.4.2-dev.-1",
-  "repository": "https://github.com/VirginEngine/wdwh.git",
-  "description": "Easyer web dev without html and reduced css",
+  "name": "wdwh",
+  "author": "kubashh",
+  "version": "1.4.4-dev.-1",
+  "repository": "https://github.com/kubashh/wdwh.git",
+  "description": "Easyer web dev without html",
   "keywords": [
-    "@virgin-engine/wdwh",
-    "virgin-engine",
-    "VirginEngine",
     "wdwh",
+    "@kubashh/wdwh",
+    "kubashh",
     "web",
     "html",
     "css",
